# webclipper

./: Cargo.toml  Procfile
src/: db.rs  handlers.rs  hashid.rs  main.rs  models.rs  views.rs
static/: index.html
templates/: base.html  index.html  snippet.html
