[package]
name = "webclipper"
version = "0.1.0"
authors = ["Pavel Fokin"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
askama = { version = "0.8,0", features = ["with-actix-web"] }
bytes = "0.4.12"
env_logger = "0.6.1"
futures = "0.1.25"
harsh = "0.1.6"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
